# pothix-codes

./: .gitignore  README.markdown  README.md
actionscript/: Game.as
asm/: README  pothix.asm
c/gtk/: hello  hello.c  teste  teste1.c
cpp/hero_day_old_code/: history.rtf  project.cpp
cpp/lazyfoo-sdl-tutorials/: README.md
cpp/undefined_behavior_clang/: loop  ub.cpp
d/: test.d
elixir/portal/: README.md  mix.exs
go/learning/: channel.go  http.go  http_server.go  http_server_exercise.go  json.go
go/snakegame/: snake.go
haskell/functional-programming-101-edx/: exercise1.hs  exercise2.hs  exercise3.hs
haskell/learnyouahaskell/: 1.README  2.starting-out.hs  3.types-and-typeclasses.hs  4.syntax-in-functions.hs  5.recursion.hs  6.higher-order-functions.hs  7.modules.hs
java/AndroidBeginningLab/: .project  AndroidManifest.xml
javascript/: canvas.html
javascript/canvas/: canvas2d.html  snake.html  webgl.html
javascript/university-financial-exercise/: README  References.txt  exercise1_structure.html  exercise2_structure.html  style.css
kotlin/: hello-world.kt
php/: anti-IE6-army.php
python/: snakegame.py
python/computational-investment-course/: .gitignore  copy_fixtures  install
python/graphql-django/: README.md
r/coursera-statistics-one/: assignment10.R  assignment11.R  assignment2.R  assignment3.R  assignment4.R  assignment5.R  assignment6.R  assignment7.R  assignment8.R  assignment9.R  basics.R  basics.r  lab10.R  (+9 more)
rust/twitter-export-to-roam/: Cargo.toml  README.md
rust/twitter-export-to-roam/src/: main.rs
shell/: photix  photoresize.sh
(+513 files in other folders)
